# Audio-SSL

./: README.md  analyze.py  backbone.py  base_random_probe.py  baseline_supervised.py  cjepa.py  dataset.py  dino.py  eda_checks.py  finetune.py  jepa.py  linear_probe.py  linear_probe_ls.py  mae.py  mask_utils.py  precompute_mels.py  pyproject.toml  requirements.txt  train.py  train_ls.py  visualize_masking.py
logs/jepa/: analysis_results.json  finetune_results.json  history.json  probe_results.json
logs/jepa_ls/: history.json  probe_domain_shift_results.json
logs/mae/: analysis_results.json  finetune_results.json  history.json  probe_results.json
logs/mae_ls/: history.json  probe_domain_shift_results.json
logs/mae_sota/: analysis_results.json  finetune_results.json  history.json  probe_results.json
logs/mae_sota_ls/: history.json  probe_domain_shift_results.json
